@startuml

skinparam linetype ortho
hide circle
hide methods
hide stereotypes

' ==========================
' Entities (Tables)
' ==========================

entity "sleep_entries" as sleep_entries {
  * id : integer
  --
  date : text (ISO8601)
  wakeUpTime : text (ISO8601)
  sleepTime : text (ISO8601)
  totalHours : real
  napHours : real
  tags : text (JSON)
}

entity "meal_entries" as meal_entries {
  * id : integer
  --
  date : text (ISO8601)
  time : text (ISO8601)
  name : text
  quantity : integer
  price : real
  calories : integer
  tags : text (JSON)
  notes : text
}

entity "mood_entries" as mood_entries {
  * id : integer
  --
  date : text (ISO8601)
  timestamp : text (ISO8601)
  moodLevel : integer (1-5)
  emoji : text
  notes : text
}

entity "exercise_entries" as exercise_entries {
  * id : integer
  --
  date : text (ISO8601)
  timestamp : text (ISO8601)
  type : text
  runType : text
  distance : real
  duration : real
  pace : real
  intervalDistance : real
  intervalTime : real
  restTime : real
  intervalCount : integer
  exerciseName : text
  equipmentType : text
  reps : integer
  weight : real
  sets : integer
  notes : text
}

entity "task_entries" as task_entries {
  * id : integer
  --
  date : text (ISO8601)
  timestamp : text (ISO8601)
  taskType : text
  notes : text
}

entity "activity_entries" as activity_entries {
  * id : integer
  --
  date : text (ISO8601)
  timestamp : text (ISO8601)
  tagId : integer
  notes : text
}

entity "tags" as tags {
  * id : integer
  --
  name : text
  emoji : text
  category : text
  color : text
  sortOrder : integer
}

entity "nap_entries" as nap_entries {
  * id : integer
  --
  sleepEntryId : integer
  startTime : text (ISO8601)
  endTime : text (ISO8601)
  duration : real
}

' ==========================
' Relationships (Foreign Keys)
' ==========================

' Activity Entry -> Tag
tags ||--o{ activity_entries : "tagId"

' Nap Entry -> Sleep Entry
sleep_entries ||--o{ nap_entries : "sleepEntryId"

@enduml
